Add spain translate

--- a/system/languages/es.lng
+++ b/system/languages/es.lng
@@ -5,12 +5,38 @@
 'E-mail' => 'Correo Eletrónico',
 'Address 1' => 'Dirección 1',
 'Address 2' => 'Dirección 2',
-'City' => 'Ciudad/Pueblo/Poblado',
+'City' => 'Ciudad / Pueblo / Poblado',
 'State/Province/Region' => 'Departamento/Estado/Provincia/Región',
 'Notes' => 'Notas',
 'Phone' => 'Teléfono',
 'Get another CAPTCHA' => 'Cargar otro CAPTCHA',
 'Get an audion CAPTCHA' => 'Cargar audio de CAPTCHA',
 'Enter the words from picture' => 'Ingresar palabras de la imagen',
-'Send me a quote' => 'Enviarme Cotización'
+'Send me a quote' => 'Enviarme Cotización',
+'Id' => 'Id',
+'Client' => 'Cliente',
+'Title' => 'Titulo',
+'Owner' => 'Propietario',
+'Date' => 'Fecha',
+'Status' => 'Estado',
+'Preview' => 'Previsualización',
+'Remove' => 'Eliminar',
+'search quote by title, by creator, by client email & name' => 'buscar presupuesto por título, por creador, por nombre o correo de cliente',
+'Quote Sent' => 'Presupuesto enviado',
+'Lost opportunity' => 'Oportunidad perdida',
+'Quote New' => 'Nuevo presupuesto',
+'Add new quote' => 'Añadir nuevo presupuesto',
+'With selected' => 'Selección',
+'select an action' => 'selecciona una opción',
+'Total ' => 'Total ',
+'quotes found' => 'presupuestos encontrados',
+'Add one now' => 'Crear',
+'There are no quotes, yet' => 'Aún no hay presupuestos',
+'Delete' => 'Eliminar',
+
+'Overwrite quote user using shipping address email' => 'Overwrite quote user using shipping address email',
+'Overwrite quote user using billing address email' => 'Overwrite quote user using billing address email',
+'Use same data for shipping?' => 'Use same data for shipping?',
+'This quote is empty.' => 'This quote is empty.',
+
 );
