Add Spain translate

--- a/system/languages/es.lng
+++ b/system/languages/es.lng
@@ -44,6 +44,8 @@
 'Save quote' => 'Salvar presupuesto',
 'Save and Send quote' => ' Guardar y enviar presupuesto',
 'Preview quote' => 'Previsualizar presupuesto',
-'Manage options' => 'Gestioanr opciones'
+'Manage options' => 'Gestioanr opciones',
+'You are about to remove an item. Are you sure?' => 'Está apunto de eliminar un elemento. ¿Está seguro?',
+'Wrong format for email address' => 'Formato de dirección de correo electrónico incorrecta'
 
 );
