--- a/system/languages/es.lng
+++ b/system/languages/es.lng
@@ -33,8 +33,8 @@
 'Add one now' => 'Crear',
 'There are no quotes, yet' => 'Aún no hay presupuestos',
 'Delete' => 'Eliminar',
-'Overwrite quote user using shipping address email' => 'Actualizar presupuesto con la dirección de email de envío',
-'Overwrite quote user using billing address email' => 'Actualizar presupuesto con la dirección de email de facturación',
+'Assign quote to customer using the email address provided in shipping info' => 'Actualizar presupuesto con la dirección de email de envío',
+'Assign quote to customer using the email address provided in billing info' => 'Actualizar presupuesto con la dirección de email de facturación',
 'Use same data for shipping?' => '¿Utilizar los mismos datos para la dirección de entrega?',
 'This quote is empty.' => 'El presupuesto está vacío.',
 'Billing info' => 'Información de facturación',
