Add FR translations

--- a/system/languages/fr.lng
+++ b/system/languages/fr.lng
@@ -8,5 +8,117 @@
     'Ms' => 'Mme',
     'Miss' => 'Mlle',
     'Dr' => 'Dr',
-    'Thank you! The quote was generated for you. Our manager will contact you soon to clarify the details' => 'Nous vous remercions! Votre devis a été généré. Notre équipe vous contactera bientôt pour préciser les détails'
+    'Thank you! The quote was generated for you. Our manager will contact you soon to clarify the details' => 'Nous vous remercions! Votre devis a été généré. Notre équipe vous contactera bientôt pour préciser les détails',
+    'Quote' => 'Quote',
+    'Configuration updated' => 'Configuration updated',
+    'Cannot update quote configuration.' => 'Cannot update quote configuration.',
+    'This user can\'t be deleted. User is used in quote.' => 'This user can\'t be deleted. User is used in quote.',
+    'Please sign and validate your signature first, then to get things started, please make a full payment' => 'Please sign and validate your signature first, then to get things started, please make a full payment',
+    'using the credit card form below' => 'using the credit card form below',
+    'To get things started please make payment of' => 'To get things started please make payment of',
+    'You can\'t send expired quote.' => 'You can\'t send expired quote.',
+    'Order has been updated' => 'Order has been updated',
+    'Cannot save quote draggable configuration.' => 'Cannot save quote draggable configuration.',
+    'Quote id is missing' => 'Quote id is missing',
+    'Quote not found' => 'Quote not found',
+    'Sorry, but you didn\'t feel all the required fields or you entered a wrong captcha. Please try again.' => 'Sorry, but you didn\'t feel all the required fields or you entered a wrong captcha. Please try again.',
+    'Sorry, but you didn\'t feel all the required fields. Please try again.' => 'Sorry, but you didn\'t feel all the required fields. Please try again.',
+    'Server encountered a problem. Unable to create quote' => 'Server encountered a problem. Unable to create quote',
+    'Can\'t duplicate Quote' => 'Can\'t duplicate Quote',
+    'Empty cart ID' => 'Empty cart ID',
+    'Quote for duplication not found' => 'Quote for duplication not found',
+    'cart not found' => 'cart not found',
+    'Not valid email address' => 'Not valid email address',
+    'Please fill in the required fields' => 'Please fill in the required fields',
+    'Please enter a valid email address' => 'Please enter a valid email address',
+    'Quote id is missing' => 'Quote id is missing',
+    'Please sign the quote' => 'Please sign the quote',
+    'Quote not found' => 'Quote not found',
+    'This quote already signed' => 'This quote already signed',
+    'Thank you! A confirmation email with a copy of this agreement has been sent to you. Now to effectively place this order, please make a payment as instructed.' => 'Thank you! A confirmation email with a copy of this agreement has been sent to you. Now to effectively place this order, please make a payment as instructed.',
+    'Thank you! A confirmation email with a copy of this agreement has been sent to you.' => 'Thank you! A confirmation email with a copy of this agreement has been sent to you.',
+    'This quote is empty.' => 'This quote is empty.',
+    'Prefix' => 'Prefix',
+    'Select' => 'Select',
+    ' Hello! We created a new quote for you' => ' Hello! We created a new quote for you',
+    ' Hello! Your quote has been updated' => ' Hello! Your quote has been updated',
+    'Shopping Shortcuts' => 'Shopping Shortcuts',
+    'Store Quote Form - Generates instantly a quote request form' => 'Store Quote Form - Generates instantly a quote request form',
+    'Not yet accepted' => 'Not yet accepted',
+    'Please find a copy of this signed proposal in your inbox at' => 'Please find a copy of this signed proposal in your inbox at',
+    'Billing info' => 'Billing info',
+    'Shipped to' => 'Shipped to',
+    'Add product' => 'Add product',
+    'Save quote' => 'Save quote',
+    'Save and Send quote' => 'Save and Send quote',
+    'Preview quote' => 'Preview quote',
+    'Duplicate quote' => 'Duplicate quote',
+    'Download Proposal PDF' => 'Download Proposal PDF',
+    'Required fields are missing! Please fill all fields marked with *' => 'Required fields are missing! Please fill all fields marked with *',
+    'Thank you! The quote was generated for you. Our manager will contact you soon to clarify the details' => 'Thank you! The quote was generated for you. Our manager will contact you soon to clarify the details',
+    'Not set' => 'Not set',
+    'unknown' => 'unknown',
+    'Quote New' => 'Quote New',
+    'Quote Sent' => 'Quote Sent',
+    'Payment received' => 'Payment received',
+    'Lost opportunity' => 'Lost opportunity',
+    'Preview' => 'Preview',
+    'Delete' => 'Delete',
+    'search quote by title, by creator, by client email & name' => 'search quote by title, by creator, by client email & name',
+    'Search Quote' => 'Search Quote',
+    'Create a new quote' => 'Create a new quote',
+    'Create quote from a template' => 'Create quote from a template',
+    'Search by quote title' => 'Search by quote title',
+    'Quote title' => 'Quote title',
+    'Create Quote' => 'Create Quote',
+    'Id' => 'Id',
+    'Client' => 'Client',
+    'Title' => 'Title',
+    'Owner' => 'Owner',
+    'Date' => 'Date',
+    'Status' => 'Status',
+    'Remove' => 'Remove',
+    'There are no quotes, yet' => 'There are no quotes, yet',
+    'Add one now' => 'Add one now',
+    'With selected' => 'With selected',
+    'select an action' => 'select an action',
+    'To place this order, and get things started, please make a non-refundable down payment of ' => 'To place this order, and get things started, please make a non-refundable down payment of ',
+    'using the credit card form below' => 'using the credit card form below',
+    'or' => 'or',
+    'Payment type' => 'Payment type',
+    'Full Payment required' => 'Full Payment required',
+    'Partial Payment required' => 'Partial Payment required',
+    'Signature required' => 'Signature required',
+    'To get things started please make payment of' => 'To get things started please make payment of',
+    'Please sign and validate your signature first, then to get things started, please make a full payment' => 'Please sign and validate your signature first, then to get things started, please make a full payment',
+    'We received your' => 'We received your',
+    'deposit of' => 'deposit of',
+    'Please pay the remaining amount of' => 'Please pay the remaining amount of',
+    'When instructed to do so using the credit card form below' => 'When instructed to do so using the credit card form below',
+    'First' => 'First',
+    'Previous' => 'Previous',
+    'Next' => 'Next',
+    'Last' => 'Last',
+    'Total ' => 'Total ',
+    'quotes found' => 'quotes found',
+    'Start typing name or e-mail to search among addresses' => 'Start typing name or e-mail to search among addresses',
+    'Signature' => 'Signature',
+    'Client signature will be here' => 'Client signature will be here',
+    'Sign here using cursor or finger on your smartphone' => 'Sign here using cursor or finger on your smartphone',
+    'Clear Signature' => 'Clear Signature',
+    'Click here to validate signature and accept proposal' => 'Click here to validate signature and accept proposal',
+    'Are you happy with your signature?' => 'Are you happy with your signature?',
+    'Manage options' => 'Manage options',
+    'free' => 'free',
+    'Close' => 'Close',
+    'Search' => 'Search',
+    'search products' => 'search products',
+    'Save options' => 'Save options',
+    'Search by name, sku, mpn or tags' => 'Search by name, sku, mpn or tags',
+    'Nothing Found' => 'Nothing Found',
+    'Add products and close' => 'Add products and close',
+    'Quote system settings' => 'Quote system settings',
+    'Saved' => 'Saved',
+    'This user can\'t be deleted. User is used in quote.' => 'This user can\'t be deleted. User is used in quote.'
+
 );?>
