--- a/system/languages/fr.lng
+++ b/system/languages/fr.lng
@@ -8,117 +8,123 @@
     'Ms' => 'Mme',
     'Miss' => 'Mlle',
     'Dr' => 'Dr',
-    'Thank you! The quote was generated for you. Our manager will contact you soon to clarify the details' => 'Nous vous remercions! Votre devis a été généré. Notre équipe vous contactera bientôt pour préciser les détails',
-    'Quote' => 'Quote',
-    'Configuration updated' => 'Configuration updated',
-    'Cannot update quote configuration.' => 'Cannot update quote configuration.',
-    'This user can\'t be deleted. User is used in quote.' => 'This user can\'t be deleted. User is used in quote.',
-    'Please sign and validate your signature first, then to get things started, please make a full payment' => 'Please sign and validate your signature first, then to get things started, please make a full payment',
-    'using the credit card form below' => 'using the credit card form below',
-    'To get things started please make payment of' => 'To get things started please make payment of',
-    'You can\'t send expired quote.' => 'You can\'t send expired quote.',
-    'Order has been updated' => 'Order has been updated',
-    'Cannot save quote draggable configuration.' => 'Cannot save quote draggable configuration.',
-    'Quote id is missing' => 'Quote id is missing',
-    'Quote not found' => 'Quote not found',
-    'Sorry, but you didn\'t feel all the required fields or you entered a wrong captcha. Please try again.' => 'Sorry, but you didn\'t feel all the required fields or you entered a wrong captcha. Please try again.',
-    'Sorry, but you didn\'t feel all the required fields. Please try again.' => 'Sorry, but you didn\'t feel all the required fields. Please try again.',
-    'Server encountered a problem. Unable to create quote' => 'Server encountered a problem. Unable to create quote',
-    'Can\'t duplicate Quote' => 'Can\'t duplicate Quote',
-    'Empty cart ID' => 'Empty cart ID',
-    'Quote for duplication not found' => 'Quote for duplication not found',
-    'cart not found' => 'cart not found',
-    'Not valid email address' => 'Not valid email address',
-    'Please fill in the required fields' => 'Please fill in the required fields',
-    'Please enter a valid email address' => 'Please enter a valid email address',
-    'Quote id is missing' => 'Quote id is missing',
-    'Please sign the quote' => 'Please sign the quote',
-    'Quote not found' => 'Quote not found',
-    'This quote already signed' => 'This quote already signed',
-    'Thank you! A confirmation email with a copy of this agreement has been sent to you. Now to effectively place this order, please make a payment as instructed.' => 'Thank you! A confirmation email with a copy of this agreement has been sent to you. Now to effectively place this order, please make a payment as instructed.',
-    'Thank you! A confirmation email with a copy of this agreement has been sent to you.' => 'Thank you! A confirmation email with a copy of this agreement has been sent to you.',
-    'This quote is empty.' => 'This quote is empty.',
-    'Prefix' => 'Prefix',
-    'Select' => 'Select',
-    ' Hello! We created a new quote for you' => ' Hello! We created a new quote for you',
-    ' Hello! Your quote has been updated' => ' Hello! Your quote has been updated',
-    'Shopping Shortcuts' => 'Shopping Shortcuts',
-    'Store Quote Form - Generates instantly a quote request form' => 'Store Quote Form - Generates instantly a quote request form',
-    'Not yet accepted' => 'Not yet accepted',
-    'Please find a copy of this signed proposal in your inbox at' => 'Please find a copy of this signed proposal in your inbox at',
-    'Billing info' => 'Billing info',
-    'Shipped to' => 'Shipped to',
-    'Add product' => 'Add product',
-    'Save quote' => 'Save quote',
-    'Save and Send quote' => 'Save and Send quote',
-    'Preview quote' => 'Preview quote',
-    'Duplicate quote' => 'Duplicate quote',
-    'Download Proposal PDF' => 'Download Proposal PDF',
-    'Required fields are missing! Please fill all fields marked with *' => 'Required fields are missing! Please fill all fields marked with *',
-    'Thank you! The quote was generated for you. Our manager will contact you soon to clarify the details' => 'Thank you! The quote was generated for you. Our manager will contact you soon to clarify the details',
-    'Not set' => 'Not set',
-    'unknown' => 'unknown',
-    'Quote New' => 'Quote New',
-    'Quote Sent' => 'Quote Sent',
-    'Payment received' => 'Payment received',
-    'Lost opportunity' => 'Lost opportunity',
-    'Preview' => 'Preview',
-    'Delete' => 'Delete',
-    'search quote by title, by creator, by client email & name' => 'search quote by title, by creator, by client email & name',
-    'Search Quote' => 'Search Quote',
-    'Create a new quote' => 'Create a new quote',
-    'Create quote from a template' => 'Create quote from a template',
-    'Search by quote title' => 'Search by quote title',
-    'Quote title' => 'Quote title',
-    'Create Quote' => 'Create Quote',
+    'Quote' => 'Devis',
+    'Configuration updated' => 'Configuration est mise à jour',
+    'Cannot update quote configuration.' => 'Impossible de mettre à jour la configuration du devis.',
+    'This user can\'t be deleted. User is used in quote.' => 'Impossible de supprimer l\'utilisateur. Il est utilisé dans le devis.',
+    'Please sign and validate your signature first, then to get things started, please make a full payment' => 'Veuillez d\'abord signer et valider votre signature et après effectuer un paiement complet',
+    'using the credit card form below' => 'en utilisant le formulaire de carte de crédit ci-dessous',
+    'To get things started please make payment of' => 'Pour commencer, veuillez effectuer le paiement de',
+    'You can\'t send expired quote.' => 'Vous ne pouvez pas envoyer de devis expiré.',
+    'Order has been updated' => 'La commande a été mise à jour',
+    'Cannot save quote draggable configuration.' => 'Impossible de sauvegarder la configuration déplaçable du devis.',
+    'Quote id is missing' => 'ID de devis n\'est pas indiqué',
+    'Quote not found' => 'Devis introuvable',
+    'Sorry, but you didn\'t feel all the required fields or you entered a wrong captcha. Please try again.' => 'Désolé, mais vous n\'avez pas rempli tous les champs obligatoires ou vous avez entré un mauvais captcha. Veuillez réessayer.',
+    'Sorry, but you didn\'t feel all the required fields. Please try again.' => 'Désolé, mais vous n\'avez pas rempli tous les champs obligatoires. Veuillez réessayer.',
+    'Server encountered a problem. Unable to create quote' => 'Le serveur a rencontré un problème. Impossible de créer un devis',
+    'Can\'t duplicate Quote' => 'Impossible de dupliquer le devis',
+    'Empty cart ID' => 'ID de panier vide',
+    'Quote for duplication not found' => 'Devis pour duplication introuvable',
+    'cart not found' => 'panier introuvable',
+    'Not valid email address' => 'E-mail invalide',
+    'Please fill in the required fields' => 'Veuillez remplir les champs obligatoires',
+    'Please enter a valid email address' => 'Veuillez indiquer une adresse email valide',
+    'Quote id is missing' => 'L\'ID de devis n\'est pas indiqué',
+    'Please sign the quote' => 'Veuillez signer le devis',
+    'Quote not found' => 'Devis introuvable',
+    'This quote already signed' => 'Ce devis est déjà signé',
+    'Thank you! A confirmation email with a copy of this agreement has been sent to you. Now to effectively place this order, please make a payment as instructed.' => 'Merci! Le mail de confirmation avec une copie de cet accord vous a été envoyé. Afin de passer efficacement cette commande, veuillez effectuer le paiement comme indiqué.',
+    'Thank you! A confirmation email with a copy of this agreement has been sent to you.' => 'Merci! Le mail de confirmation avec une copie de cet accord vous a été envoyé.',
+    'This quote is empty.' => 'Ce devis est vide',
+    'Prefix' => 'Préfixe',
+    'Select' => 'Séléctionner',
+    ' Hello! We created a new quote for you' => ' Bonjour! Nous avons crée un nouveau devis pour vous',
+    ' Hello! Your quote has been updated' => ' Bonjour! Votre devis a été mis à jour',
+    'Shopping Shortcuts' => 'Raccourcis d\'achat',
+    'Store Quote Form - Generates instantly a quote request form' => 'Formulaire de devis d\'achat - Génère instantanément un formulaire de demande de devis',
+    'Not yet accepted' => 'Pas encore accepté',
+    'Please find a copy of this signed proposal in your inbox at' => 'Veuillez trouver une copie de cette proposition signée dans votre boîte de réception à l\'adresse',
+    'Billing info' => 'Information de facturation',
+    'Shipped to' => 'Expédié(es) à',
+    'Add product' => 'Ajouter un produit',
+    'Save quote' => 'Sauvegarder le devis',
+    'Save and Send quote' => 'Sauvegarder et envoyer le devis',
+    'Preview quote' => 'Aperçu du devis',
+    'Duplicate quote' => 'Dupliquer le devis',
+    'Download Proposal PDF' => 'Télécharger le PDF de proposition',
+    'Required fields are missing! Please fill all fields marked with *' => 'Les champs obligatoires ne sont pas remplis! Veuillez remplir tous les champs avec *',
+    'Thank you! The quote was generated for you. Our manager will contact you soon to clarify the details' => 'Merci! Le devis a été généré pour vous. Notre responsable va vous contacter pour clarifier les détails',
+    'Not set' => 'N\'est pas indiqué',
+    'unknown' => 'inconnu',
+    'Quote New' => 'Nouveau devis',
+    'Quote Sent' => 'Devis envoyé',
+    'Payment received' => 'Paiement reçu',
+    'Lost opportunity' => 'Opportunité perdue',
+    'Preview' => 'Aperçu ',
+    'Delete' => 'Supprimer',
+    'search quote by title, by creator, by client email & name' => 'rechercher le devis par titre, par créateur, par e-mail et nom du client',
+    'Search Quote' => 'Rechercher un devis',
+    'Create a new quote' => 'Créer un nouveau devis',
+    'Create quote from a template' => 'Créer un devis à partir d\'un modèle',
+    'Search by quote title' => 'Rechercher par titre du devis ',
+    'Quote title' => 'Titre du devis',
+    'Create Quote' => 'Créer un devis',
     'Id' => 'Id',
     'Client' => 'Client',
-    'Title' => 'Title',
-    'Owner' => 'Owner',
+    'Title' => 'Titre',
+    'Owner' => 'Propriétaire',
     'Date' => 'Date',
-    'Status' => 'Status',
-    'Remove' => 'Remove',
-    'There are no quotes, yet' => 'There are no quotes, yet',
-    'Add one now' => 'Add one now',
-    'With selected' => 'With selected',
-    'select an action' => 'select an action',
-    'To place this order, and get things started, please make a non-refundable down payment of ' => 'To place this order, and get things started, please make a non-refundable down payment of ',
-    'using the credit card form below' => 'using the credit card form below',
-    'or' => 'or',
-    'Payment type' => 'Payment type',
-    'Full Payment required' => 'Full Payment required',
-    'Partial Payment required' => 'Partial Payment required',
-    'Signature required' => 'Signature required',
-    'To get things started please make payment of' => 'To get things started please make payment of',
-    'Please sign and validate your signature first, then to get things started, please make a full payment' => 'Please sign and validate your signature first, then to get things started, please make a full payment',
-    'We received your' => 'We received your',
-    'deposit of' => 'deposit of',
-    'Please pay the remaining amount of' => 'Please pay the remaining amount of',
-    'When instructed to do so using the credit card form below' => 'When instructed to do so using the credit card form below',
-    'First' => 'First',
-    'Previous' => 'Previous',
-    'Next' => 'Next',
-    'Last' => 'Last',
+    'Status' => 'Statut',
+    'Remove' => 'Supprimer',
+    'There are no quotes, yet' => 'Pas de devis pour le moment',
+    'Add one now' => 'Ajouter un devis maintenant',
+    'With selected' => 'Avec le sélectionné',
+    'select an action' => 'sélectionner une action',
+    'To place this order, and get things started, please make a non-refundable down payment of ' => 'Pour passer cette commande et procéder, veuillez effectuer un payement par acompte non remboursable de ',
+    'using the credit card form below' => 'en utilisant le formulaire de carte de crédit ci-dessous',
+    'or' => 'ou',
+    'Payment type' => 'Type de paiement',
+    'Full Payment required' => 'Paiement COMPLET requis',
+    'Partial Payment required' => 'Paiement partiel requis',
+    'Signature required' => 'Signature requise',
+    'To get things started please make payment of' => 'Pour commencer, veuillez effectuer le paiement de',
+    'Please sign and validate your signature first, then to get things started, please make a full payment' => 'Veuillez d\'abord signer et valider votre signature, puis pour commencer, veuillez effectuer un paiement complet',
+    'We received your' => 'Nous avons reçu votre',
+    'deposit of' => 'dépôt de',
+    'Please pay the remaining amount of' => 'Veuillez payer le reste du montant de',
+    'When instructed to do so using the credit card form below' => 'Une fois demandé en utilisant le formulaire de carte de crédit ci-dessous',
+    'First' => 'Premier',
+    'Previous' => 'Précédent',
+    'Next' => 'Suivant',
+    'Last' => 'Dernier',
     'Total ' => 'Total ',
-    'quotes found' => 'quotes found',
-    'Start typing name or e-mail to search among addresses' => 'Start typing name or e-mail to search among addresses',
+    'quotes found' => 'devis trouvés',
+    'Start typing name or e-mail to search among addresses' => 'Commencer à taper le nom ou l\'e-mail pour rechercher parmi les adresses',
     'Signature' => 'Signature',
-    'Client signature will be here' => 'Client signature will be here',
-    'Sign here using cursor or finger on your smartphone' => 'Sign here using cursor or finger on your smartphone',
-    'Clear Signature' => 'Clear Signature',
-    'Click here to validate signature and accept proposal' => 'Click here to validate signature and accept proposal',
-    'Are you happy with your signature?' => 'Are you happy with your signature?',
-    'Manage options' => 'Manage options',
-    'free' => 'free',
-    'Close' => 'Close',
-    'Search' => 'Search',
-    'search products' => 'search products',
-    'Save options' => 'Save options',
-    'Search by name, sku, mpn or tags' => 'Search by name, sku, mpn or tags',
-    'Nothing Found' => 'Nothing Found',
-    'Add products and close' => 'Add products and close',
-    'Quote system settings' => 'Quote system settings',
-    'Saved' => 'Saved',
-    'This user can\'t be deleted. User is used in quote.' => 'This user can\'t be deleted. User is used in quote.'
+    'Client signature will be here' => 'La signature du client sera ici',
+    'Sign here using cursor or finger on your smartphone' => 'Veuillez laisser votre signature ici utilisant le curseur ou doigt sur votre smartphone',
+    'Clear Signature' => 'Effacer la signature',
+    'Click here to validate signature and accept proposal' => 'Cliquez ici pour valider la signature et accepter la proposition',
+    'Are you happy with your signature?' => 'Êtes-vous satisfait(e) de votre signature?',
+    'Manage options' => 'Gérer les options',
+    'free' => 'gratuit',
+    'Close' => 'Fermer',
+    'Search' => 'Recherche',
+    'search products' => 'Recherche des produits',
+    'Save options' => 'Sauvegarder les options',
+    'Search by name, sku, mpn or tags' => 'Recherche par nom, sku, mpn ou balises',
+    'Nothing Found' => 'Aucun résultat',
+    'Add products and close' => 'Ajouter les produits et fermer',
+    'Quote system settings' => 'Paramètres du système de devis',
+    'Saved' => 'Sauvegardé',
+    'This user can\'t be deleted. User is used in quote.' => 'Impossible de supprimer cet utilisateur. L\'utilisateur figure dans le devis.',
+    'Company' => 'Company',
+    'Mobile' => 'Mobile',
+    'Notes' => 'Notes',
+    'Use same data for shipping?' => 'Use same data for shipping?',
+    'Position' => 'Position',
+    'Send me a quote' => 'Send me a quote',
+    'Mobile' => 'Mobile'
 
 );?>
