--- a/system/languages/fr.lng
+++ b/system/languages/fr.lng
@@ -158,6 +158,6 @@
     'filter by owner' => 'filtrer par propriétaire',
     'filter by status' => 'filtrer par statut',
     'Quote Signed (Signature only quote)' => 'Devis signé (Signature seulement devis)',
-    'Thank you for submitting a quote request. We will get back to you shortly - You will shortly be redirected to our homepage':'Merci d\'avoir soumis une demande de devis. Nous vous répondrons dans les plus brefs délais - Vous serez bientôt redirigé vers notre page d\'accueil'
+    'Thank you for submitting a quote request. We will get back to you shortly - You will shortly be redirected to our homepage'=>'Merci d\'avoir soumis une demande de devis. Nous vous répondrons dans les plus brefs délais - Vous serez bientôt redirigé vers notre page d\'accueil'
 
 );?>
